Etho-5/force-app/main/default/objects/Candidato__c/fields/Pontuacao__c.field-meta.xml
<CustomField>
    <fullName>Pontuacao__c</fullName>
    <description>Pontuação baseada na idade e na dívida.</description>
    <formula>FLOOR(ValorDivida__c / 100) + 40000 - IF(Idade__c &gt; 80, 40000, ( ABS(Idade__c - 40) * 1000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pontuação baseada na idade e na dívida.</inlineHelpText>
    <label>Pontuação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>